<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/lbl_todo_title_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:text="@string/qoli2"
        android:textSize="22sp"
        android:textStyle="bold"
        android:background="@drawable/style_title_todo"
        android:textColor="@color/white"
        android:padding="8dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_details_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_todo_title_details"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:cardCornerRadius="12dp"
        tools:cardElevation="6dp"
        tools:cardUseCompatPadding="true"
        android:backgroundTint="@color/detail_todo_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lbl_todo_des_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#00adb5"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/lbl_todo_More_des_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/qoli20"
                android:textColor="#eeeeee"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/lbl_todo_onCreated_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on_created"
                android:textColor="#00adb5"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/lbl_todo_More_onCreated_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/qoli2"
                android:textColor="#eeeeee"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/lbl_todo_onUpdated_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/on_updated"
                android:textColor="#00adb5"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/lbl_todo_More_onUpdated_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/qoli2"
                android:textColor="#eeeeee"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"/>
            

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_details_todo_upload_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_details_todo"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:cardCornerRadius="8dp"
        tools:cardElevation="4dp"
        tools:cardUseCompatPadding="true"
        android:backgroundTint="@color/detail_todo_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lbl_todo_upload_img_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_image"
                android:textColor="#00adb5"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:layout_gravity="start|center"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/img_product_upload"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/nonepic"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btn_Img_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:layout_margin="8dp"
                android:layout_gravity="end|center"
                android:backgroundTint="@color/fab_yellow_color"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_details_todo_upload_Signatureـimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_details_todo_upload_img"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:cardCornerRadius="8dp"
        tools:cardElevation="4dp"
        tools:cardUseCompatPadding="true"
        android:backgroundTint="@color/detail_todo_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lbl_todo_upload_Signature_img_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signature"
                android:textColor="#00adb5"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:layout_gravity="start|center"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/img_Signature_product_upload"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/nonepic"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btn_Signature_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:layout_margin="8dp"
                android:layout_gravity="end|center"
                android:backgroundTint="@color/fab_yellow_color"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_details_todo_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_details_todo_upload_Signatureـimg"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:cardCornerRadius="8dp"
        tools:cardElevation="4dp"
        tools:cardUseCompatPadding="true"
        android:backgroundTint="@color/detail_todo_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_Save_details_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"/>
            <Button
                android:id="@+id/btn_Close_details_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Close"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/red_color"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>